--- a/frontend/create.html
+++ b/frontend/create.html
@@ -39,8 +39,12 @@
     </nav>
 
     <div id="bodyContainer">
-      <h1>NightLife</h1>
+      <form id="eventEntryForm">
+        <label for="startEndEntry">Select a start and end time: <i class="far fa-calendar-alt"></i></label><input id="startEndEntry" type="text" name="datetimes" />
+      </form>
     </div>
+
+    
 
     <!--/* Bootstrap, Jquery, Moment and DateRangePicker (for calendar), Custom JS */-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
