--- a/frontend/create_event.html
+++ b/frontend/create_event.html
@@ -5,13 +5,43 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Create Event</title>
-
+        <!--/* Bootstrap, Google Fonts, FontAwesome, Custom Stylesheet */-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+        <link href="styles/nightlife.css" rel="stylesheet">
 </head>
 
 <body>
-<form action="/api/event/create" method="POST">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><i class="far fa-moon"></i><b> NightLife</b></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/create_event.html">Create an Event</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/resources.html">Resources</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/faq.html">FAQ</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
+<div id="entryForm">
+    <h1>Create an Event</h1>
+    <form action="/api/event/create" method="POST">
     Event Name: <input type="text" name="name" required><br>
-    Event Host: <input type="text" name="host" required><br>
+    Event Host: <input id="hostName" type="text" name="host" required><br>
     Event Theme: <input type="text" name="theme"><br>
     Event Description: <input type="text" name="description" required><br>
     Start time: <input type="datetime-local" name="time_start" required><br>
@@ -22,7 +52,18 @@
     State: <input type="text" name="state" value="OR" required><br>
     Zip: <input type="number" name="zip" required><br>
     <input type="submit" value="Submit">
-</form>
+    </form>  
+</div>
+
+
+
+<!--/* Bootstrap, Jquery, Moment and DateRangePicker (for calendar), Custom JS */-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<script src="js/entry.js" type="text/javascript"></script>
 </body>
 
 </html>
