--- a/frontend/create_event.html
+++ b/frontend/create_event.html
@@ -50,6 +50,10 @@
             <div class="col-10"><input class="form-control" type="text" placeholder='e.g. "Sigma Nu" or "WiCS"' id="eventHostInput" name="eventHostInput"></div>
         </div>
         <div class="form-group row">
+            <label for="eventThemeInput" class="col-2 col-form-label">Event Theme:</label>
+            <div class="col-10"><input class="form-control" type="text" placeholder='e.g. Toga' id="eventThemeInput" name="eventThemeInput"></div>
+        </div>
+        <div class="form-group row">
             <label for="eventDescriptionInput">Description:</label>
             <textarea class="form-control" name="eventDescriptionInput" id="eventDescriptionInput" rows="3"></textarea>
         </div>
