--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -32,6 +32,7 @@
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/faq.html">FAQ</a>
+
             </li>
             </ul>
         </div>
@@ -42,6 +43,12 @@
     <hr>
     <form action="/api/event/faq" method="POST">
     </form>  
+    <ol style="list-style-type:none">
+    <p style="font-size:15px">Q: Who is the organizer of the parties hosted on nightlife ?<BR> A: Users that sign up to host the party</p>
+    <p style="font-size:15px">Q: Can teachers or narcs find out about these parties? <BR> A: No</p>
+    <p style="font-size:15px">Q: Do only fraternities host these parties? <BR> A: No, Anyone can host these parties</p>
+    <p style="font-size:15px">Q: Can teachers or narcs find out about these parties? <BR> A: No </p>
+    <p style="font-size:15px">Q: Can teachers or narcs find out about these parties? <BR> A: No </p>
 </div>
 
 
