worked on resources page, still more to do

--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -41,7 +41,14 @@
     <h1>Resources <i class="fas fa-cog"></i></h1>
     <hr>
     <form action="/api/event/resources" method="POST">
-    </form>  
+    </form>
+    <div>
+    	<a href="https://pages.uoregon.edu/saferide/" target="_blank"><img src="images/saferide_logo.png" style="width:45%; margin-top:50px;" align="middle" /></a>
+    </div>
+    <div>
+    	<a href="https://www.uber.com/cities/eugene-or" target="_blank"><img src="images/uber_logo.png" style="width:45%;" align="left" /></a>
+    	<a href="https://www.lyft.com/rider" target="_blank"><img src="images/lyft_logo.png" style="width:45%; height:275px; margin-top:85px" align="right" /></a>
+    </div>
 </div>
 
 
