updated resources.html and fixed typos in faq.html, also added more logos

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -44,11 +44,11 @@
     <form action="/api/event/faq" method="POST">
     </form>  
     <ol style="list-style-type:none">
-    <p style="font-size:15px">Q: Who is the organizer of the parties hosted on nightlife ?<BR> A: Users that sign up to host the party</p>
+    <p style="font-size:15px">Q: Who is the organizer of the parties hosted on nightlife?<BR> A: Users that sign up to host the party</p>
     <p style="font-size:15px">Q: Can teachers or narcs find out about these parties? <BR> A: No</p>
     <p style="font-size:15px">Q: Do only fraternities host these parties? <BR> A: No, Anyone can host these parties</p>
-    <p style="font-size:15px">Q: Are these parties only exclusively for university of Oregon students? <BR> A: Yes </p>
-    <p style="font-size:15px">Q: Is there a certain age limitation for each party listed on nighlife <BR> A: Age restrictions will be listed in the party description </p>
+    <p style="font-size:15px">Q: Are these parties only exclusively for University of Oregon students? <BR> A: Yes </p>
+    <p style="font-size:15px">Q: Is there a certain age limitation for each party listed on nighlife? <BR> A: Age restrictions will be listed in the party description </p>
     </ol>
 </div>
 
