--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -43,11 +43,16 @@
     <form action="/api/event/resources" method="POST">
     </form>
     <div>
-    	<a href="https://pages.uoregon.edu/saferide/" target="_blank"><img src="images/saferide_logo.png" style="width:45%; margin-top:50px;" align="middle" /></a>
+    	<a href="https://www.uber.com/cities/eugene-or" target="_blank"><img src="images/logos/uber_logo.png" style="width:45%; height:300px;" align="left" /></a>
+    	<a href="https://www.ubereats.com/en-US/" target="_blank"><img src="images/logos/ubereats_logo.png" style="width:45%; height:300px;" align="right" /></a>
     </div>
     <div>
-    	<a href="https://www.uber.com/cities/eugene-or" target="_blank"><img src="images/uber_logo.png" style="width:45%;" align="left" /></a>
-    	<a href="https://www.lyft.com/rider" target="_blank"><img src="images/lyft_logo.png" style="width:45%; height:275px; margin-top:85px" align="right" /></a>
+    	<a href="https://www.lyft.com/rider" target="_blank"><img src="images/logos/lyft_logo.png" style="width:45%; height:200px;" align="left" /></a>
+    	<a href="https://www.grubhub.com/delivery/or-eugene" target="_blank"><img src="images/logos/grubhub_logo.png" style="width:45%; height:200px;" align="right" /></a>
+    </div>
+    <div>
+    	<a href="https://pages.uoregon.edu/saferide/" target="_blank"><img src="images/logos/saferide_logo.png" style="width:45%; border-radius:25px; margin-top:75px;" align="left" /></a>
+    	<a href="https://www.doordash.com/" target="_blank"><img src="images/logos/doordash_logo.png" style="width:45%; border-radius:25px; margin-top:75px;" align="right" /></a>
     </div>
 </div>
 
