Cleaned up wording and clarity for some questions/answers in faq.html

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -44,11 +44,11 @@
     <form action="/api/event/faq" method="POST">
     </form>  
     <ol style="list-style-type:none">
-    <p style="font-size:15px; color:#66FCF1;">Q: Who is the organizer of the parties hosted on nightlife?<BR><span style="font-size:15px; color:white;"> A: Users that sign up to host the party</p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Can teachers or narcs find out about these parties?<BR><span style="font-size:15px; color:white;"> A: No</p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Do only fraternities host these parties? <BR><span style="font-size:15px; color:white;"> A: No, Anyone can host these parties</p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Are these parties only exclusively for University of Oregon students? <BR><span style="font-size:15px; color:white;"> A: Yes </p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Is there a certain age limitation for each party listed on nighlife? <BR><span style="font-size:15px; color:white;"> A: Age restrictions will be listed in the party description </p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Who organizes the parties hosted on NightLife?<BR><span style="font-size:15px; color:white;"> A: Any users that sign up to host the party</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Can professors or "narcs" find out about these parties?<BR><span style="font-size:15px; color:white;"> A: No, only NightLife users can discover the parties posted on it.</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Do only fraternities host these parties? <BR><span style="font-size:15px; color:white;"> A: No, Anyone can host an event on NightLife.</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Are these parties exclusively for University of Oregon students? <BR><span style="font-size:15px; color:white;"> A: Yes </p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Is there a certain age limitation for each party listed on NightLife? <BR><span style="font-size:15px; color:white;"> A: Any applicable age restrictions will be listed in the party description. </p>
     </ol>
 </div>
 
