--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -49,6 +49,7 @@
     <p style="font-size:15px; color:#66FCF1;">Q: Do only fraternities host these parties? <BR><span style="font-size:15px; color:white;"> A: No. Anyone can host an event on NightLife.</p>
     <p style="font-size:15px; color:#66FCF1;">Q: Are these parties exclusively for University of Oregon students? <BR><span style="font-size:15px; color:white;"> A: Yes. At this time, NightLife is limited to the University of Oregon and Eugene area. </p>
     <p style="font-size:15px; color:#66FCF1;">Q: Is there a certain age limitation for each party listed on NightLife? <BR><span style="font-size:15px; color:white;"> A: Any applicable age restrictions will be listed in the party description. </p>
+    <p style="font-size:15px; color:#66FCF1;">Q: I believe someone is misusing NightLife. What Should I do? <BR><span style="font-size:15px; color:white;"> A: If any abuse or misuse of NightLife's features is suspected please promptly contact us by emailing nightlifeassistance@gmail.com with a description of the issue encountered.  </p>
     </ol>
 </div>
 
