--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -44,9 +44,9 @@
     <form action="/api/event/faq" method="POST">
     </form>  
     <ol style="list-style-type:none">
-    <p style="font-size:15px; color:#66FCF1;">Q: Who organizes the parties hosted on NightLife?<BR><span style="font-size:15px; color:white;"> A: Any users that sign up to host the party</p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Can professors or "narcs" find out about these parties?<BR><span style="font-size:15px; color:white;"> A: No, only NightLife users can discover the parties posted on it.</p>
-    <p style="font-size:15px; color:#66FCF1;">Q: Do only fraternities host these parties? <BR><span style="font-size:15px; color:white;"> A: No. Anyone can host an event on NightLife.</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Who organizes and or creates the parties hosted on the NightLife web application?<BR><span style="font-size:15px; color:white;"> A: Any user or host that signs up on the nightlife web application may host a party or event.</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Can professors or "narcs" find out about these parties?<BR><span style="font-size:15px; color:white;"> A: No, only NightLife users can discover the parties posted on the web application.</p>
+    <p style="font-size:15px; color:#66FCF1;">Q: Do fraternities exclusively host these parties? <BR><span style="font-size:15px; color:white;"> A: No. Anyone can host an event on NightLife.</p>
     <p style="font-size:15px; color:#66FCF1;">Q: Are these parties exclusively for University of Oregon students? <BR><span style="font-size:15px; color:white;"> A: Yes. At this time, NightLife is limited to the University of Oregon and Eugene area. </p>
     <p style="font-size:15px; color:#66FCF1;">Q: Is there a certain age limitation for each party listed on NightLife? <BR><span style="font-size:15px; color:white;"> A: Any applicable age restrictions will be listed in the party description. </p>
     <p style="font-size:15px; color:#66FCF1;">Q: I believe someone is misusing NightLife. What Should I do? <BR><span style="font-size:15px; color:white;"> A: If any abuse or misuse of NightLife's features is suspected please promptly contact us by emailing nightlifeassistance@gmail.com with a description of the issue encountered.  </p>
