--- a/frontend/create_event.html
+++ b/frontend/create_event.html
@@ -28,6 +28,9 @@
                 <a class="nav-link" href="/create_event.html">Create an Event</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/top-events.html">Top Events</a>
+              </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/resources.html">Resources</a>
             </li>
             <li class="nav-item">
