--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -28,11 +28,13 @@
                 <a class="nav-link" href="/create_event.html">Create an Event</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/top-events.html">Top Events</a>
+              </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/resources.html">Resources</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/faq.html">FAQ</a>
-
             </li>
             </ul>
         </div>
