--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/create_event.html">Create an Event</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/top-events.html">Top Events</a>
+              </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/resources.html">Resources</a>
             </li>
