--- a/frontend/top-events.html
+++ b/frontend/top-events.html
@@ -39,8 +39,22 @@
         </div>
     </nav>
 
-    <div id="mapContainer">
-      <div id="map"></div>
+    <div id="entryForm">
+      <h1>Top Events <i class="fas fa-question-circle"></i></h1>
+      <hr>
+
+      <table class="table table-hover">
+        <thead>
+          <th>Average Rating</th>
+          <th>Name</th>
+          <th>Theme</th>
+          <th>Description</th>
+          <th>Time</th>
+        </thead>
+        <tbody id="partyReviews">
+        </tbody>
+      </table>
+
     </div>
 
     <!--/* Bootstrap, Jquery, Moment and DateRangePicker (for calendar), Bootstrap Slider, Custom JS */-->
@@ -49,5 +63,24 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK0VvGmW9rc1y-oX6APE7Rc3wQnoRUI58&callback=initMap"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.1/bootstrap-slider.min.js"></script>
     <script src="js/nightlife.js" type="text/javascript"></script>
+
+    <script>
+      $.ajax({
+        url: '/api/event/all/ratings',
+        method: 'GET',
+        dataType: 'json',
+        success: function(data) {
+          events = data['events']
+          for (event in events){
+            
+          }
+
+        },
+        error: function(data) {
+          console.log("Failed to load events")
+        }
+      });
+    </script>
+
   </body>
 </html>
