--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="/faq.html">FAQ</a>
             </li>
 	    <li class="nav-item">
-	      <a class="nav-link" href="https://nightlife.auth.us-west-2.amazoncognito.com/login?response_type=code&client_id=15voq007ca9gg1ped30aieiieg&redirect_uri=https://benludwin.me/">Log In</a>
+	      <a class="nav-link" href="https://nightlife.auth.us-west-2.amazoncognito.com/login?response_type=token&client_id=15voq007ca9gg1ped30aieiieg&redirect_uri=https://benludwin.me/">Log In</a>
 	    </li>
           </ul>
         </div>
