Final aesthetic touches

--- a/frontend/top-events.html
+++ b/frontend/top-events.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <title>NightLife - Eugene</title>
 
-    <!--/* Bootstrap, Google Fonts, FontAwesome, Bootstrap Slider, Custom Stylesheet */-->
+    <!--/* Bootstrap, Google Fonts, FontAwesome, Custom Stylesheet */-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.1/css/bootstrap-slider.min.css">
-    <link href="styles/nightlife.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/nightlife.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -40,7 +39,7 @@
     </nav>
 
     <div id="entryForm">
-      <h1>Top Events <i class="fas fa-question-circle"></i></h1>
+      <h1>Top Events <i class="fa fa-trophy" aria-hidden="true"></i></h1>
       <hr>
 
       <table class="table table-hover">
@@ -57,46 +56,10 @@
 
     </div>
 
-    <!--/* Bootstrap, Jquery, Moment and DateRangePicker (for calendar), Bootstrap Slider, Custom JS */-->
+    <!--/* Jquery, Bootstrap */-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK0VvGmW9rc1y-oX6APE7Rc3wQnoRUI58&callback=initMap"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.1/bootstrap-slider.min.js"></script>
-    <script src="js/nightlife.js" type="text/javascript"></script>
 
-    <script>
-      $.ajax({
-        url: '/api/event/all',
-        method: 'GET',
-        dataType: 'json',
-        success: function(data) {
-          events = data['events']
-          console.log(events)
-          for (var i=0; i<events.length; i++){
-            event = events[i];
-            if (event.rating == 0) {
-              rating = 'No Ratings';
-            } else {
-              rating = event.rating;
-            }
-            
-            row = '<tr>'
-                + '<td>'+rating+'</td>'
-                + '<td>'+event.name+'</td>'
-                + '<td>'+event.theme+'</td>'
-                + '<td>'+event.description+'</td>'
-                + '<td>'+new Date(event.time_start).toLocaleString()+'-'+new Date(event.time_end).toLocaleString()+'</td>'
-                + '</tr>';
-            
-            $('tbody#partyReviews').append(row);
-          }
-
-        },
-        error: function(data) {
-          console.log("Failed to load events")
-        }
-      });
-    </script>
-
+    <script src="js/top-parties.js"></script>
   </body>
 </html>
