--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,10 @@
 
     <!--/* Bootstrap, Google Fonts, FontAwesome, Bootstrap Slider, Custom Stylesheet */-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.3.1/css/bootstrap-slider.min.css">
-    <link href="styles/nightlife.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/nightlife.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,11 +39,12 @@
         </div>
     </nav>
 
+    <!--/* Map container div */-->
     <div id="mapContainer">
       <div id="map"></div>
     </div>
 
-    <!--/* Bootstrap, Jquery, Moment and DateRangePicker (for calendar), Bootstrap Slider, Custom JS */-->
+    <!--/* Jquery, Bootstrap, Google Maps API, Bootstrap Slider, Custom JS */-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK0VvGmW9rc1y-oX6APE7Rc3wQnoRUI58&callback=initMap"></script>
