--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Resources</title>
+
         <!--/* Bootstrap, Google Fonts, FontAwesome, Custom Stylesheet */-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-        <link href="styles/nightlife.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles/nightlife.css">
 </head>
 
 <body>
@@ -43,8 +43,6 @@
 <div id="entryForm">
     <h1>Resources <i class="fas fa-cog"></i></h1>
     <hr>
-    <form action="/api/event/resources" method="POST">
-    </form>
     <div>
     	<a href="https://www.uber.com/cities/eugene-or" target="_blank"><img src="images/logos/uber_logo.png" style="width:45%; height:300px;" align="left" /></a>
     	<a href="https://www.ubereats.com/en-US/" target="_blank"><img src="images/logos/ubereats_logo.png" style="width:45%; height:300px;" align="right" /></a>
@@ -61,11 +59,10 @@
 
 
 
-<!--/* Bootstrap, Jquery, Custom JS */-->
+<!--/* Jquery, Jquery UI, Bootstrap*/-->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/entry.js" type="text/javascript"></script>
 </body>
 
 </html>
